--- a/src/components/app/chat/sidebar/sidebar.module.scss
+++ b/src/components/app/chat/sidebar/sidebar.module.scss
@@ -1,6 +1,14 @@
 .lastMessage {
   display: flex;
   flex-direction: row;
+  max-width: 280px;
+
+  span:nth-child(2) {
+    max-width: 240px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .lastDocument {
